--- a/AFG/scss/style.scss
+++ b/AFG/scss/style.scss
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: ' ';
 }
 
-.wrap {
+.wrapper {
     position: relative;
     width: 100%;
     max-width: 100%;
@@ -122,7 +122,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-.header-rightblock {
+.nav {
     display: flex;
     margin-left: auto;
 
